update style.css with quote section and fix .random overlap
Changed the height of .random to min-height so that it grows. Adjusted gaps and margins of the listed items for window resizing.
Updated the quote section, styled the text and aligned elements with margin adjustments.

--- a/style.css
+++ b/style.css
@@ -124,7 +124,7 @@ button {
   flex-direction: column;
   align-items: center;
 
-  height: 550px;
+  min-height: 550px;
 }
 
 .info-title {
@@ -138,11 +138,12 @@ button {
 .info {
   display: flex;
   flex-direction: row;
-  gap: 50px;
+  gap: 0px;
   margin: 0px;
 
   flex-wrap: wrap;
   justify-content: center;
+
 }
 
 .info li {
@@ -150,22 +151,54 @@ button {
   flex-wrap: wrap;
   width: 225px;
   
+
   text-align: center;
   color: #676869;
   font-size: 18px;
   
+  margin: 0 25px 50px 25px;
 }
 
 li img {
   height: 225px;
   width: 225px;
   object-fit: cover;
-  border-radius: 15px;  
+  border-radius: 15px;
+  
 }
 
 .quote {
   background-color: #E5E7EB;
   display: flex;
   flex-direction: column;
+  align-items: center;
+
+  
+  color: #1F2937;
+}
+
+.sentence {
+  font-size: 36px;
+  font-style: italic;
+  font-weight: 100;
+  text-align: left;
+
+  width: 1200px;
+  max-width: 90%;
+  margin: 0 10px;
+  margin-top: 100px;
+  
   
 }
+
+.name {
+  font-weight: 800;
+  font-size: 24px;
+  text-align: right;
+
+  width: 1200px;
+  max-width: 90%;
+  margin: 0 10px;
+  margin-bottom: 100px;
+}
+
